# dataforseoapi

./: .gitignore  README.md  docker-compose.yml
backend/: .env.dev  Dockerfile  pyproject.toml
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/src/: routers.py
backend/src/tasks/: admin.py  client.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/src/tasks/migrations/: 0001_initial.py  0002_auto_20210402_1228.py
frontend/: Dockerfile
frontend/angular-app/src/: index.html
frontend/angular-app/src/app/: api.service.ts  app-routing.module.ts  app.component.html  app.module.ts  task.ts
frontend/angular-app/src/app/task-list/: task-list.component.html  task-list.component.ts
frontend/angular-app/src/environments/: environment.prod.ts  environment.ts
